--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/query-sync-storage-persister": "^5.90.6",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-query-persist-client": "^5.90.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
